--- a/index-classic.html
+++ b/index-classic.html
@@ -162,7 +162,7 @@
 											<nav class="collapse">
 												<ul class="nav nav-pills" id="mainNav">
 													<li class="dropdown">
-														<a class="dropdown-item dropdown-toggle active " href="/">
+														<a class="dropdown-item dropdown-toggle active " href="./">
 															Home
 														</a>
 	
