--- a/index-classic.html
+++ b/index-classic.html
@@ -168,7 +168,7 @@
 	
 													</li>
 													<li class="dropdown dropdown-mega">
-														<a class="dropdown-item dropdown-toggle " href="about-us.html" >
+														<a class="dropdown-item dropdown-toggle " href="./about" >
 															About us
 														</a>
 	
