--- a/about-us.html
+++ b/about-us.html
@@ -134,7 +134,7 @@
 														</ul>
 													</li>
 													<li class="dropdown">
-														<a class="dropdown-item dropdown-toggle" href="#">
+														<a class="dropdown-item dropdown-toggle" href="./carrer">
 															Carrers
 														</a>
 	
