--- a/home.html
+++ b/home.html
@@ -138,13 +138,13 @@
 														</ul>
 													</li>
 													<li class="dropdown">
-														<a class="dropdown-item dropdown-toggle" href="carrer.html">
+														<a class="dropdown-item dropdown-toggle" href="./carrers">
 															Carrers
 														</a>
 	
 													</li>
 													<li class="dropdown">
-														<a class="dropdown-item dropdown-toggle" href="contact.html">
+														<a class="dropdown-item dropdown-toggle" href="./contact">
 															Contact
 														</a>
 	
