--- a/Corporate-training.html
+++ b/Corporate-training.html
@@ -59,7 +59,7 @@
 							<div class="header-column">
 								<div class="header-row">
 									<div class="header-logo">
-										<a href="#">
+										<a href="./home">
 											<img alt="Porto" width="120" height="48" data-sticky-width="82"
 												data-sticky-height="40" src="img/home/subhujo-logo.png">
 										</a>
@@ -74,13 +74,13 @@
 											<nav class="collapse">
 												<ul class="nav nav-pills" id="mainNav">
 													<li class="dropdown">
-														<a class="dropdown-item dropdown-toggle " href="index-classic.html">
+														<a class="dropdown-item dropdown-toggle " href="./home">
 															Home
 														</a>
 	
 													</li>
 													<li class="dropdown dropdown-mega">
-														<a class="dropdown-item dropdown-toggle " href="about-us.html">
+														<a class="dropdown-item dropdown-toggle " href="./about-us">
 															About us
 														</a>
 	
@@ -92,40 +92,40 @@
 														</a>
 														<ul class="dropdown-menu">
 															<li class="dropdown-submenu">
-																<a class="dropdown-item" href="#">Application
+																<a class="dropdown-item" href="./Application-development">Application
 																	Development</a>
 	
 															</li>
 															<li class="dropdown-submenu">
-																<a class="dropdown-item" href="Offshore-development.html">Offshore Development</a>
+																<a class="dropdown-item" href="./Offshore-development">Offshore Development</a>
 	
 															</li>
 															<li class="dropdown-submenu">
-																<a class="dropdown-item" href="Corporate-training.html">Corporate Training</a>
+																<a class="dropdown-item" href="./Corporate-training">Corporate Training</a>
 	
 															</li>
 															<li class="dropdown-submenu">
-																<a class="dropdown-item" href="Sap.html">SAP</a>
+																<a class="dropdown-item" href="./Sap">SAP</a>
 	
 															</li>
 															<li class="dropdown-submenu">
-																<a class="dropdown-item" href="Testing.html">Testing</a>
+																<a class="dropdown-item" href="./Testing">Testing</a>
 	
 															</li>
 															<li class="dropdown-submenu">
-																<a class="dropdown-item" href="IT&ITES.html">IT /ITES Staffing</a>
+																<a class="dropdown-item" href="./IT&ITES">IT /ITES Staffing</a>
 	
 															</li>
 															<li class="dropdown-submenu">
-																<a class="dropdown-item" href="Datawarehousing.html">Datawarehousing</a>
+																<a class="dropdown-item" href="./Datawarehousing">Datawarehousing</a>
 	
 															</li>
 															<li class="dropdown-submenu">
-																<a class="dropdown-item" href="Oracle.html">Oracle</a>
+																<a class="dropdown-item" href="./Oracle">Oracle</a>
 	
 															</li>
 															<li class="dropdown-submenu">
-																<a class="dropdown-item" href="MicrosoftImplementation.html">Microsoft Implementation &
+																<a class="dropdown-item" href="./MicrosoftImplementation">Microsoft Implementation &
 																	Support</a>
 	
 															</li>
@@ -133,13 +133,13 @@
 														</ul>
 													</li>
 													<li class="dropdown">
-														<a class="dropdown-item dropdown-toggle" href="#">
+														<a class="dropdown-item dropdown-toggle" href="./carrers">
 															Carrers
 														</a>
 	
 													</li>
 													<li class="dropdown">
-														<a class="dropdown-item dropdown-toggle" href="contact.html">
+														<a class="dropdown-item dropdown-toggle" href="./contact">
 															Contact
 														</a>
 	
