--- a/carrers.html
+++ b/carrers.html
@@ -415,7 +415,7 @@
             <span>Get in Touch</span>
         </div>
         <div class="row py-3 my-4">
-            <div class="col-md-3 mb-4 mb-lg-0">
+            <div class="col-md-3 mb-4 mb-lg-0 col-12">
                 <h5 class="text-3 mb-3 pb-1">CONTACT US</h5>
                 <p class="text-3 text-color-light "><a href="tel:0123456789" class="text-decoration-none text-color-light">(800) 123-4567</a></p>
                 <p class="mb-1">International: <a href="tel:0123456789" class="text-decoration-none">(333) 456-6670</a></p>
@@ -433,7 +433,7 @@
             <div class="col-md-9 mb-4 mb-lg-0">
                 
                 <div class="row pt-3">
-                    <div class="col-6 col-lg-4 mb-4 mb-lg-0">
+                    <div class="col-6 col-lg-4 mb-4 mb-lg-0 col-12">
                         <h5 class="text-3 mb-3">Legal Policies</h5>
                         <ul class="list list-icons list-icons-sm mb-0">
                             <li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="
@@ -448,7 +448,7 @@
                     </div>
                     <div class="col-6 col-lg-5 mb-4 mb-lg-0">
                         <h5 class="text-3 mb-3">Services</h5>
-                        <ul class="list list-icons list-icons-sm mb-0">
+                        <ul class="list list-icons list-icons-sm mb-0 col-12">
                             <li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="">Application Development</a></li>
                             <li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="">Offshore Development</a></li>
                             <li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="">Corporate Training</a></li>
@@ -457,7 +457,7 @@
                     </div>
                     <div class="col-6 col-lg-3 mb-4 mb-lg-0">
                         <h5 class="text-3 mb-3">Quick Links</h5>
-                        <ul class="list list-icons list-icons-sm mb-0">
+                        <ul class="list list-icons list-icons-sm mb-0 col-12">
                             <li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="">Home</a></li>
                             <li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="">About us</a></li>
                             <li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="">Carrers</a></li>
