--- a/home.html
+++ b/home.html
@@ -97,8 +97,7 @@
 														</a>
 														<ul class="dropdown-menu">
 															<li class="dropdown-submenu">
-																<a class="dropdown-item" href="./Application-development">Application
-																	Development</a>
+																<a class="dropdown-item" href="./Application-development">Application Development</a>
 	
 															</li>
 															<li class="dropdown-submenu">
@@ -972,7 +971,7 @@
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget risus porta, tincidunt turpis at, interdum tortor. Suspendisse potenti. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Fusce ante tellus, convallis non consectetur sed, pharetra nec ex.</p>
 											</blockquote>
 											<div class="testimonial-author">
-												<p><strong class="text-2 opacity-10">- John Smith. Okler</strong></p>
+												<p><strong class="text-2 opacity-10">Name,Desgination</strong></p>
 											</div>
 										</div>
 									</div>
@@ -987,7 +986,7 @@
 												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eget risus porta, tincidunt turpis at, interdum tortor. Suspendisse potenti. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 											</blockquote>
 											<div class="testimonial-author">
-												<p><strong class="text-2 opacity-10">- John Smith. Okler</strong></p>
+												<p><strong class="text-2 opacity-10">Name,Desgination</strong></p>
 											</div>
 										</div>
 									</div>
@@ -1003,7 +1002,7 @@
 						<span>Get in Touch</span>
 					</div>
 					<div class="row py-3 my-4">
-						<div class="col-md-3 mb-4 mb-lg-0">
+						<div class="col-md-3 mb-4 mb-lg-0 col-12">
 							<h5 class="text-3 mb-3 pb-1">CONTACT US</h5>
 							<p class="text-3 text-color-light "><a href="tel:0123456789" class="text-decoration-none text-color-light">(800) 123-4567</a></p>
 							<p class="mb-1">International: <a href="tel:0123456789" class="text-decoration-none">(333) 456-6670</a></p>
@@ -1018,7 +1017,7 @@
 								<li class="social-icons-linkedin"><a href="http://www.linkedin.com/" target="_blank" title="Linkedin"><i class="fab fa-linkedin-in text-2"></i></a></li>
 							</ul>
 						</div>
-						<div class="col-md-9 mb-4 mb-lg-0">
+						<div class="col-md-9 mb-4 mb-lg-0 col-12">
 							
 							<div class="row pt-3">
 								<div class="col-6 col-lg-4 mb-4 mb-lg-0">
@@ -1034,7 +1033,7 @@
 										
 									</ul>
 								</div>
-								<div class="col-6 col-lg-5 mb-4 mb-lg-0">
+								<div class="col-6 col-lg-5 mb-4 mb-lg-0 col-12">
 									<h5 class="text-3 mb-3">Services</h5>
 									<ul class="list list-icons list-icons-sm mb-0">
 										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="">Application Development</a></li>
@@ -1043,7 +1042,7 @@
 										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="">Datawarehousing</a></li>
 									</ul>
 								</div>
-								<div class="col-6 col-lg-3 mb-4 mb-lg-0">
+								<div class="col-6 col-lg-3 mb-4 mb-lg-0 col-12">
 									<h5 class="text-3 mb-3">Quick Links</h5>
 									<ul class="list list-icons list-icons-sm mb-0">
 										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="">Home</a></li>
