--- a/about-us.html
+++ b/about-us.html
@@ -60,7 +60,7 @@
 							<div class="header-column">
 								<div class="header-row">
 									<div class="header-logo">
-										<a href="./home">
+										<a href="./">
 											<img alt="Porto" width="120" height="48" data-sticky-width="82"
 												data-sticky-height="40" src="img/home/subhujo-logo.png">
 										</a>
@@ -75,7 +75,7 @@
 											<nav class="collapse">
 												<ul class="nav nav-pills" id="mainNav">
 													<li class="dropdown">
-														<a class="dropdown-item dropdown-toggle " href="./home">
+														<a class="dropdown-item dropdown-toggle " href="./">
 															Home
 														</a>
 	
