--- a/IT&ITES.html
+++ b/IT&ITES.html
@@ -6,10 +6,10 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>About Us | Porto - Multipurpose Website Template</title>	
+		<title>Subhujo Technologies</title>	
 
 		<meta name="keywords" content="WebSite Template" />
-		<meta name="description" content="Porto - Multipurpose Website Template">
+		<meta name="description" content="Subhujo Technologies">
 		<meta name="author" content="okler.net">
 
 		<!-- Favicon -->
@@ -59,7 +59,7 @@
 							<div class="header-column">
 								<div class="header-row">
 									<div class="header-logo">
-										<a href="./home">
+										<a href="./">
 											<img alt="Porto" width="120" height="48" data-sticky-width="82"
 												data-sticky-height="40" src="img/home/subhujo-logo.png">
 										</a>
@@ -74,7 +74,7 @@
 											<nav class="collapse">
 												<ul class="nav nav-pills" id="mainNav">
 													<li class="dropdown">
-														<a class="dropdown-item dropdown-toggle " href="./home">
+														<a class="dropdown-item dropdown-toggle " href="./">
 															Home
 														</a>
 	
