--- a/carrers.html
+++ b/carrers.html
@@ -6,10 +6,10 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>Porto - Multipurpose Website Template</title>	
+		<title>Subhujo Technologies</title>	
 
 		<meta name="keywords" content="WebSite Template" />
-		<meta name="description" content="Porto - Multipurpose Website Template">
+		<meta name="description" content="Subhujo Technologies">
 		<meta name="author" content="okler.net">
 
 		<!-- Favicon -->
@@ -446,7 +446,7 @@
                             
                         </ul>
                     </div>
-                    <div class="col-6 col-lg-5 mb-4 mb-lg-0">
+                    <div class="col-6 col-lg-5 mb-4 mb-lg-0 col-12">
                         <h5 class="text-3 mb-3">Services</h5>
                         <ul class="list list-icons list-icons-sm mb-0 col-12">
                             <li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="">Application Development</a></li>
@@ -455,7 +455,7 @@
                             <li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="">Datawarehousing</a></li>
                         </ul>
                     </div>
-                    <div class="col-6 col-lg-3 mb-4 mb-lg-0">
+                    <div class="col-6 col-lg-3 mb-4 mb-lg-0 col-12">
                         <h5 class="text-3 mb-3">Quick Links</h5>
                         <ul class="list list-icons list-icons-sm mb-0 col-12">
                             <li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="">Home</a></li>
