--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>Porto - Multipurpose Website Template</title>	
+		<title>Subhujo Technologies</title>	
 
 		<meta name="keywords" content="WebSite Template" />
-		<meta name="description" content="Porto - Multipurpose Website Template">
+		<meta name="description" content="Subhujo Technologies">
 		<meta name="author" content="okler.net">
 
 		<!-- Favicon -->
