--- a/Datawarehousing.html
+++ b/Datawarehousing.html
@@ -6,10 +6,10 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>About Us | Porto - Multipurpose Website Template</title>	
+		<title>Subhujo Technologies</title>	
 
 		<meta name="keywords" content="WebSite Template" />
-		<meta name="description" content="Porto - Multipurpose Website Template">
+		<meta name="description" content="Subhujo Technologies">
 		<meta name="author" content="okler.net">
 
 		<!-- Favicon -->
@@ -59,7 +59,7 @@
 							<div class="header-column">
 								<div class="header-row">
 									<div class="header-logo">
-										<a href="#">
+										<a href="./">
 											<img alt="Porto" width="120" height="48" data-sticky-width="82"
 												data-sticky-height="40" src="img/home/subhujo-logo.png">
 										</a>
@@ -74,13 +74,13 @@
 											<nav class="collapse">
 												<ul class="nav nav-pills" id="mainNav">
 													<li class="dropdown">
-														<a class="dropdown-item dropdown-toggle " href="index-classic.html">
+														<a class="dropdown-item dropdown-toggle " href="./">
 															Home
 														</a>
 	
 													</li>
 													<li class="dropdown dropdown-mega">
-														<a class="dropdown-item dropdown-toggle " href="about-us.html">
+														<a class="dropdown-item dropdown-toggle " href="./about-us">
 															About us
 														</a>
 	
@@ -92,12 +92,12 @@
 														</a>
 														<ul class="dropdown-menu">
 															<li class="dropdown-submenu">
-																<a class="dropdown-item" href="Application-development.html">Application
+																<a class="dropdown-item" href="./Application-development">Application
 																	Development</a>
 	
 															</li>
 															<li class="dropdown-submenu">
-																<a class="dropdown-item" href="Offshore-development.html">Offshore Development</a>
+																<a class="dropdown-item" href="./Offshore-development">Offshore Development</a>
 	
 															</li>
 															<li class="dropdown-submenu">
@@ -105,27 +105,27 @@
 	
 															</li>
 															<li class="dropdown-submenu">
-																<a class="dropdown-item" href="Sap.html">SAP</a>
+																<a class="dropdown-item" href="./Sap">SAP</a>
 	
 															</li>
 															<li class="dropdown-submenu">
-																<a class="dropdown-item" href="Testing.html">Testing</a>
+																<a class="dropdown-item" href="./Testing">Testing</a>
 	
 															</li>
 															<li class="dropdown-submenu">
-																<a class="dropdown-item" href="IT&ITES.html">IT /ITES Staffing</a>
+																<a class="dropdown-item" href="./IT&ITES">IT /ITES Staffing</a>
 	
 															</li>
 															<li class="dropdown-submenu">
-																<a class="dropdown-item" href="Datawarehousing.html">Datawarehousing</a>
+																<a class="dropdown-item" href="./Datawarehousing">Datawarehousing</a>
 	
 															</li>
 															<li class="dropdown-submenu">
-																<a class="dropdown-item" href="Oracle.html">Oracle</a>
+																<a class="dropdown-item" href="./Oracle">Oracle</a>
 	
 															</li>
 															<li class="dropdown-submenu">
-																<a class="dropdown-item" href="MicrosoftImplementation.html">Microsoft Implementation &
+																<a class="dropdown-item" href="./MicrosoftImplementation">Microsoft Implementation &
 																	Support</a>
 	
 															</li>
@@ -133,13 +133,13 @@
 														</ul>
 													</li>
 													<li class="dropdown">
-														<a class="dropdown-item dropdown-toggle" href="#">
+														<a class="dropdown-item dropdown-toggle" href="./carrers">
 															Carrers
 														</a>
 	
 													</li>
 													<li class="dropdown">
-														<a class="dropdown-item dropdown-toggle" href="contact.html">
+														<a class="dropdown-item dropdown-toggle" href="./contact">
 															Contact
 														</a>
 	
