--- a/Testing.html
+++ b/Testing.html
@@ -6,10 +6,10 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>About Us | Porto - Multipurpose Website Template</title>	
+		<title>Subhujo Technologies</title>	
 
 		<meta name="keywords" content="WebSite Template" />
-		<meta name="description" content="Porto - Multipurpose Website Template">
+		<meta name="description" content="Subhujo Technologies">
 		<meta name="author" content="okler.net">
 
 		<!-- Favicon -->
@@ -59,7 +59,7 @@
 							<div class="header-column">
 								<div class="header-row">
 									<div class="header-logo">
-										<a href="./home">
+										<a href="./">
 											<img alt="Porto" width="120" height="48" data-sticky-width="82"
 												data-sticky-height="40" src="img/home/subhujo-logo.png">
 										</a>
@@ -74,7 +74,7 @@
 											<nav class="collapse">
 												<ul class="nav nav-pills" id="mainNav">
 													<li class="dropdown">
-														<a class="dropdown-item dropdown-toggle " href="./home">
+														<a class="dropdown-item dropdown-toggle " href="./">
 															Home
 														</a>
 	
@@ -322,7 +322,7 @@
 						<div class="col-md-9 mb-4 mb-lg-0">
 							
 							<div class="row pt-3">
-								<div class="col-6 col-lg-4 mb-4 mb-lg-0">
+								<div class="col-6 col-lg-4 mb-4 mb-lg-0 col-12">
 									<h5 class="text-3 mb-3">Legal Policies</h5>
 									<ul class="list list-icons list-icons-sm mb-0">
 										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="
@@ -335,7 +335,7 @@
 										
 									</ul>
 								</div>
-								<div class="col-6 col-lg-5 mb-4 mb-lg-0">
+								<div class="col-6 col-lg-5 mb-4 mb-lg-0 col-12">
 									<h5 class="text-3 mb-3">Services</h5>
 									<ul class="list list-icons list-icons-sm mb-0">
 										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="">Application Development</a></li>
@@ -344,7 +344,7 @@
 										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="">Datawarehousing</a></li>
 									</ul>
 								</div>
-								<div class="col-6 col-lg-3 mb-4 mb-lg-0">
+								<div class="col-6 col-lg-3 mb-4 mb-lg-0 col-12">
 									<h5 class="text-3 mb-3">Quick Links</h5>
 									<ul class="list list-icons list-icons-sm mb-0">
 										<li><i class="fas fa-angle-right top-8"></i> <a class="link-hover-style-1" href="">Home</a></li>
