--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 												<img src="img/slides/slide-title-border.png" class="w-auto appear-animation" data-appear-animation="fadeInRightShorter" data-appear-animation-delay="250" data-plugin-options="{'minWindowWidth': 0}" alt="" />
 											</span>
 										</h3>
-										<h1 class="text-color-light font-weight-extra-bold text-12 mb-3 appear-animation" data-appear-animation="blurIn" data-appear-animation-delay="500" data-plugin-options="{'minWindowWidth': 0}">Application Development</h1>
+										<h1 class="text-color-light font-weight-extra-bold text-12 mb-3 appear-animation text-center" data-appear-animation="blurIn" data-appear-animation-delay="500" data-plugin-options="{'minWindowWidth': 0}">Application Development</h1>
 										<p class="text-4 text-color-light font-weight-light opacity-7 mb-0" data-plugin-animated-letters data-plugin-options="{'startDelay': 1000, 'minWindowWidth': 0}">Check out our Services and features</p>
 									</div>
 								</div>
@@ -282,7 +282,7 @@
 					<div class="row align-items-center mb-5">
 						<div class="col-lg-7 pe-5 appear-animation" data-appear-animation="fadeInRightShorter">
 							<h2 class="font-weight-normal text-6 mb-4"><strong class="font-weight-extra-bold">Who </strong>We Are</h2>
-							<p class="lead pe-2 mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit massa enikklam id valorem ipsum dolor sit amet, consectetur adipiscinLorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+							<p class=" pe-2 mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus blandit massa enikklam id valorem ipsum dolor sit amet, consectetur adipiscinLorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 							<p class="mb-4">Phasellus blandit massa enim. Nullam id varius elit. blandit massa enim  d varius blandit massa enimariusi d varius elit. blandit massa enimariud varius elit. blandit massa enimariusisi ariusius.</p>
 							<a class="btn btn-light text-uppercase text-primary text-1 py-2 px-4 mb-1" href="#"><strong>VIEW MORE</strong><i class="fas fa-chevron-right text-2 ps-2"></i></a>
 						</div>
@@ -348,7 +348,7 @@
 								</span>
 								<span> consectetur adipiscing elit. </span>
 							</h1>
-							<p class="lead appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="300">
+							<p class=" appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="300">
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce elementum, nulla vel pellentesque consequat, ante nulla hendrerit arcu, ac tincidunt mauris lacus sed leo.
 							</p>
 						</div>
