--- a/Application-development.html
+++ b/Application-development.html
@@ -74,58 +74,58 @@
 											<nav class="collapse">
 												<ul class="nav nav-pills" id="mainNav">
 													<li class="dropdown">
-														<a class="dropdown-item dropdown-toggle " href="./">
+														<a class="dropdown-item  " href="./">
 															Home
 														</a>
 	
 													</li>
 													<li class="dropdown dropdown-mega">
-														<a class="dropdown-item dropdown-toggle " href="./about-us">
+														<a class="dropdown-item  " href="./about-us">
 															About us
 														</a>
 	
 													</li>
 	
 													<li class="dropdown">
-														<a class="dropdown-item dropdown-toggle active" href="#">
+														<a class="dropdown-item  " href="#">
 															Services
 														</a>
 														<ul class="dropdown-menu">
-															<li class="dropdown-submenu">
-																<a class="dropdown-item" href="./Application-development
+															<li >
+																<a class="dropdown-item  " href="./Application-development
 																">Application
 																	Development</a>
 	
 															</li>
-															<li class="dropdown-submenu">
-																<a class="dropdown-item" href="./Offshore-development">Offshore Development</a>
+															<li >
+																<a class="dropdown-item " href="./Offshore-development">Offshore Development</a>
 	
 															</li>
-															<li class="dropdown-submenu">
+															<li >
 																<a class="dropdown-item" href="./Corporate-training">Corporate Training</a>
 	
 															</li>
-															<li class="dropdown-submenu">
+															<li >
 																<a class="dropdown-item" href="./Sap.html">SAP</a>
 	
 															</li>
-															<li class="dropdown-submenu">
+															<li >
 																<a class="dropdown-item" href="./Testing.html">Testing</a>
 	
 															</li>
-															<li class="dropdown-submenu">
+															<li >
 																<a class="dropdown-item" href="./IT&ITES.html">IT /ITES Staffing</a>
 	
 															</li>
-															<li class="dropdown-submenu">
+															<li >
 																<a class="dropdown-item" href="./Datawarehousing">Datawarehousing</a>
 	
 															</li>
-															<li class="dropdown-submenu">
+															<li >
 																<a class="dropdown-item" href="./Oracle">Oracle</a>
 	
 															</li>
-															<li class="dropdown-submenu">
+															<li >
 																<a class="dropdown-item" href="./MicrosoftImplementation">Microsoft Implementation &
 																	Support</a>
 	
@@ -134,13 +134,13 @@
 														</ul>
 													</li>
 													<li class="dropdown">
-														<a class="dropdown-item dropdown-toggle" href="./carrers">
+														<a class="dropdown-item " href="./carrers">
 															Carrers
 														</a>
 	
 													</li>
 													<li class="dropdown">
-														<a class="dropdown-item dropdown-toggle" href="./contact">
+														<a class="dropdown-item " href="./contact">
 															Contact
 														</a>
 	
