--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
 											<nav class="collapse">
 												<ul class="nav nav-pills" id="mainNav">
 													<li class="dropdown">
-														<a class="dropdown-item dropdown-toggle active " href="./">
+														<a class="dropdown-item  active " href="./">
 															Home
 														</a>
 	
 													</li>
 													<li class="dropdown dropdown-mega">
-														<a class="dropdown-item dropdown-toggle " href="./about-us" >
+														<a class="dropdown-item  " href="./about-us" >
 															About us
 														</a>
 	
@@ -96,39 +96,39 @@
 															Services
 														</a>
 														<ul class="dropdown-menu">
-															<li class="dropdown-submenu">
+															<li >
 																<a class="dropdown-item" href="./Application-development">Application Development</a>
 	
 															</li>
-															<li class="dropdown-submenu">
+															<li >
 																<a class="dropdown-item" href="./Offshore-development">Offshore Development</a>
 	
 															</li>
-															<li class="dropdown-submenu">
+															<li >
 																<a class="dropdown-item" href="./Corporate-training">Corporate Training</a>
 	
 															</li>
-															<li class="dropdown-submenu">
+															<li >
 																<a class="dropdown-item" href="./Sap">SAP</a>
 	
 															</li>
-															<li class="dropdown-submenu">
+															<li >
 																<a class="dropdown-item" href="./Testing">Testing</a>
 	
 															</li>
-															<li class="dropdown-submenu">
+															<li >
 																<a class="dropdown-item" href="./IT&ITES">IT /ITES Staffing</a>
 	
 															</li>
-															<li class="dropdown-submenu">
+															<li >
 																<a class="dropdown-item" href="./Datawarehousing">Datawarehousing</a>
 	
 															</li>
-															<li class="dropdown-submenu">
+															<li>
 																<a class="dropdown-item" href="./Oracle">Oracle</a>
 	
 															</li>
-															<li class="dropdown-submenu">
+															<li >
 																<a class="dropdown-item" href="./MicrosoftImplementation">Microsoft Implementation &
 																	Support</a>
 	
@@ -137,13 +137,13 @@
 														</ul>
 													</li>
 													<li class="dropdown">
-														<a class="dropdown-item dropdown-toggle" href="./carrers">
+														<a class="dropdown-item " href="./carrers">
 															Carrers
 														</a>
 	
 													</li>
 													<li class="dropdown">
-														<a class="dropdown-item dropdown-toggle" href="./contact">
+														<a class="dropdown-item " href="./contact">
 															Contact
 														</a>
 	
