--- a/about-us.html
+++ b/about-us.html
@@ -75,13 +75,13 @@
 											<nav class="collapse">
 												<ul class="nav nav-pills" id="mainNav">
 													<li class="dropdown">
-														<a class="dropdown-item dropdown-toggle " href="./">
+														<a class="dropdown-item  " href="./">
 															Home
 														</a>
 	
 													</li>
 													<li class="dropdown dropdown-mega">
-														<a class="dropdown-item dropdown-toggle active" href="./about-us">
+														<a class="dropdown-item  active" href="./about-us">
 															About us
 														</a>
 	
@@ -92,40 +92,40 @@
 															Services
 														</a>
 														<ul class="dropdown-menu">
-															<li class="dropdown-submenu">
+															<li>
 																<a class="dropdown-item" href="./Application-development">Application
 																	Development</a>
 	
 															</li>
-															<li class="dropdown-submenu">
+															<li >
 																<a class="dropdown-item" href="./Offshore-development">Offshore Development</a>
 	
 															</li>
-															<li class="dropdown-submenu">
+															<li >
 																<a class="dropdown-item" href="./Corporate-training">Corporate Training</a>
 	
 															</li>
-															<li class="dropdown-submenu">
+															<li >
 																<a class="dropdown-item" href="./Sap">SAP</a>
 	
 															</li>
-															<li class="dropdown-submenu">
+															<li >
 																<a class="dropdown-item" href="./Testing">Testing</a>
 	
 															</li>
-															<li class="dropdown-submenu">
+															<li >
 																<a class="dropdown-item" href="./IT&ITES">IT /ITES Staffing</a>
 	
 															</li>
-															<li class="dropdown-submenu">
+															<li >
 																<a class="dropdown-item" href="./Datawarehousing">Datawarehousing</a>
 	
 															</li>
-															<li class="dropdown-submenu">
+															<li >
 																<a class="dropdown-item" href="./Oracle">Oracle</a>
 	
 															</li>
-															<li class="dropdown-submenu">
+															<li >
 																<a class="dropdown-item" href="./MicrosoftImplementation">Microsoft Implementation &
 																	Support</a>
 	
@@ -134,13 +134,13 @@
 														</ul>
 													</li>
 													<li class="dropdown">
-														<a class="dropdown-item dropdown-toggle" href="./carrers">
+														<a class="dropdown-item " href="./carrers">
 															Carrers
 														</a>
 	
 													</li>
 													<li class="dropdown">
-														<a class="dropdown-item dropdown-toggle" href="./contact">
+														<a class="dropdown-item" href="./contact">
 															Contact
 														</a>
 	
@@ -728,7 +728,7 @@
 					<div class="row py-4 my-4">
 						<div class="col-md-3 mb-4 mb-lg-0 col-12">
 							<h5 class="text-3 mb-3 pb-1">CONTACT US</h5>
-							<p class="text-3 text-color-light "><a href="tel:0123456789" class="text-decoration-none text-color-light">(800) 123-4567</a></p>
+							<p class="text-3 text-color-light mb-0"><a href="tel:0123456789" class="text-decoration-none text-color-light">(800) 123-4567</a></p>
 							<p class="mb-1">International: <a href="tel:0123456789" class="text-decoration-none">(333) 456-6670</a></p>
 							<p class="mb-1">Fax: (222) 531-8999</p>
 							<ul class="list list-icons list-icons-lg">
