--- a/Corporate-training.html
+++ b/Corporate-training.html
@@ -87,7 +87,7 @@
 													</li>
 	
 													<li class="dropdown">
-														<a class="dropdown-item  active" href="#">
+														<a class="dropdown-item dropdown-toggle active" href="#">
 															Services
 														</a>
 														<ul class="dropdown-menu">
@@ -97,7 +97,7 @@
 	
 															</li>
 															<li >
-																<a class="dropdown-item" href="./Offshore-development">Offshore Development</a>
+																<a class="dropdown-item active" href="./Offshore-development">Offshore Development</a>
 	
 															</li>
 															<li >
