--- a/Offshore-development.html
+++ b/Offshore-development.html
@@ -97,7 +97,7 @@
 	
 															</li>
 															<li >
-																<a class="dropdown-item" href="./Offshore-development">Offshore Development</a>
+																<a class="dropdown-item active" href="./Offshore-development">Offshore Development</a>
 	
 															</li>
 															<li >
