--- a/Oracle.html
+++ b/Oracle.html
@@ -121,7 +121,7 @@
 	
 															</li>
 															<li >
-																<a class="dropdown-item" href="./Oracle">Oracle</a>
+																<a class="dropdown-item active" href="./Oracle">Oracle</a>
 	
 															</li>
 															<li >
