--- a/Corporate-training.html
+++ b/Corporate-training.html
@@ -97,11 +97,11 @@
 	
 															</li>
 															<li >
-																<a class="dropdown-item active" href="./Offshore-development">Offshore Development</a>
+																<a class="dropdown-item " href="./Offshore-development">Offshore Development</a>
 	
 															</li>
 															<li >
-																<a class="dropdown-item" href="./Corporate-training">Corporate Training</a>
+																<a class="dropdown-item active" href="./Corporate-training">Corporate Training</a>
 	
 															</li>
 															<li >
