--- a/Oracle.html
+++ b/Oracle.html
@@ -312,7 +312,7 @@
 								<li class="social-icons-linkedin"><a href="http://www.linkedin.com/" target="_blank" title="Linkedin"><i class="fab fa-linkedin-in text-2"></i></a></li>
 							</ul>
 						</div>
-						<div class="col-md-9 mb-4 mb-lg-0">
+						<div class="col-md-9 mb-4 mb-lg-0 mb-sm-0">
 							
 							<div class="row pt-3">
 								<div class="col-6 col-lg-4 mb-4 mb-lg-0 col-12">
