content and images changes

--- a/Application-development.html
+++ b/Application-development.html
@@ -192,29 +192,30 @@
 									<img src="img/demos/construction-2/services/services-2.jpg" class="img-fluid" alt="">
 								</div>
 								<div>
-									<img src="img/demos/construction-2/services/services-3.jpg" class="img-fluid" alt="">
+									<img src="servicespage/img/final.png" class="img-fluid" alt="">
 								</div>
 							</div>
 
 							<div class="mt-4">
-								<p class="text-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. </p>
+								<p class="text-4">  </p>
 
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. In eu libero ligula. Fusce eget metus lorem, ac viverra leo. Nullam convallis, arcu vel pellentesque sodales.</p>
+								<p>At Subhujo Technologies, we understand the power of application development when it comes to meeting a business's unique needs.Our application developers have the experience and expertise to create custom software applications with well designed architecture. We offer web based social software development, payment gateway integration, ecommerce website design & development, online marketplace setup & maintenance, as well as full-stack web application development services. </p>
 
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. In eu libero ligula. Fusce eget metus lorem, ac viverra leo. Nullam convallis.</p>
+								<p>We strive to ensure our clients receive projects that are tailored to their specific requirements while maintaining impeccable user experience throughout the entire process. With Subhujo Technologies, you can trust that your application development project will be managed professionally and efficiently with the highest levels of quality assurance.  
+								</p>
 
 								<div class="my-4">
 									<ul class="list list-icons list-primary list-borders m-0">
-										<li><i class="fas fa-check"></i> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta.</li>
-										<li><i class="fas fa-check"></i> Quisque ut nulla at nunc vehicula lacinia.</li>
-										<li><i class="fas fa-check"></i> Vestibulum ante ipsum primis in faucibus orci luctus.</li>
+										<li><i class="fas fa-check"></i> Custom software can automate repetitive tasks, streamline processes, and provide faster access to information, which can increase productivity and efficiency.</li>
+										<li><i class="fas fa-check"></i>An e-commerce app can provide a company with a new sales channel and increase revenue.</li>
+										<li><i class="fas fa-check"></i> Mobile and web apps can provide customers with 24/7 access to information and services, which can improve customer satisfaction and loyalty.</li>
 									</ul>
 								</div>
 
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. In eu libero ligula. Fusce eget metus lorem, ac viverra leo. Nullam convallis.</p>
+								<p>we strive to create application development solutions that provide an immersive digital experience for our customers . Our application developers are highly skilled in using the most up-to-date application development tools and practices, and with their expertise, we can create custom mobile and web software solutions for both iOS and Android. In addition, our application development services also allow us to integrate artificial intelligence into the core of our applications.Our  top tier engineering team creating innovative web and mobile apps so you can be confident you're getting the highest quality service.</p>
 
-								<div class="row align-items-center my-5">
-									<div class="col-lg-7 position-relative mb-5 mb-lg-0">
+								<!-- <div class="row align-items-center my-5">
+									<div class="col-lg-8 position-relative mb-5 mb-lg-0">
 										<img src="img/demos/construction-2/about-us/about-1.jpg" class="img-fluid custom-img border-radius-0 max-w-90 appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="600ms" alt="">
 										<img src="img/demos/construction-2/about-us/about-2.jpg" class="img-fluid custom-img border-radius-0 position-absolute custom-img-about appear-animation" data-appear-animation="expandIn" data-appear-animation-delay="600ms" alt="">
 									</div>
@@ -224,9 +225,9 @@
 											<p class="mb-0">Quisque ut nulla at nunc vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. In eu libero ligula. Fusce eget metus lorem, ac viverra leo. Nullam convallis, arcu vel pellentesque sodales. In eu libero ligula. Fusce eget metus lorem, ac viverra leo. Nullam convallis, arcu vel pellentesque sodales.</p>
 										</div>
 									</div>
-								</div>
+								</div> -->
 
-								<p class="pt-lg-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. In eu libero ligula. Fusce eget metus lorem, ac viverra leo. Nullam convallis, arcu vel pellentesque sodales.</p>
+								<!-- <p class="pt-lg-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. In eu libero ligula. Fusce eget metus lorem, ac viverra leo. Nullam convallis, arcu vel pellentesque sodales.</p> -->
 
 								<div class="my-4">
 									<div class="row process">
@@ -237,7 +238,7 @@
 											</div>
 											<div class="process-step-content">
 												<h4 class="mb-1 text-4 font-weight-bold">Planning</h4>
-												<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+												<p class="mb-0">It includes project scope,Gathering requirements,assigning responsibilities, setting timelines.</p>
 											</div>
 										</div>
 										<div class="process-step col-md-6 col-lg-3 mb-5 mb-md-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">
@@ -246,7 +247,7 @@
 											</div>
 											<div class="process-step-content">
 												<h4 class="mb-1 text-4 font-weight-bold">Desgining</h4>
-												<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+												<p class="mb-0">This includes creating wireframes and mockups that show how the application will look and function.</p>
 											</div>
 										</div>
 										<div class="process-step col-md-6 col-lg-3 mb-5 mb-md-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">
@@ -255,7 +256,7 @@
 											</div>
 											<div class="process-step-content">
 												<h4 class="mb-1 text-4 font-weight-bold">testing</h4>
-												<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+												<p class="mb-0">The steps that will be taken to ensure that the application is stable, secure, and user-friendly.</p>
 											</div>
 										</div>
 										
@@ -265,13 +266,13 @@
 											</div>
 											<div class="process-step-content">
 												<h4 class="mb-1 text-4 font-weight-bold">Deploying</h4>
-												<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+												<p class="mb-0"> deploy the application to production and making sure it runs smoothly after deployment.</p>
 											</div>
 										</div>
 									</div>
 								</div>
 
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. In eu libero ligula. Fusce eget metus lorem, ac viverra leo. Nullam convallis.</p>
+								<p>Our application development services cover all aspects of software creation including design, coding, testing and implementation. We specialize in complex web application development that will bring your online application ideas to life. </p>
 
 							</div>
 
