--- a/Corporate-training.html
+++ b/Corporate-training.html
@@ -196,9 +196,9 @@
 							</div>
 
 							<div class="mt-4">
-								<p class="text-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. </p>
+								
 
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. In eu libero ligula. Fusce eget metus lorem, ac viverra leo. Nullam convallis, arcu vel pellentesque sodales.</p>
+								<p>Corporate Training is more important than ever as companies strive to remain competitive in the marketplace. Subhujo Technologies provides customized corporate training tailored to your organization's specific needs, delivering a range of in-house training, public seminars, and coaching services to help drive greater energy, focus and vision. Corporate training from Subhujo Technologies enables your employees to be clear, motivated and focused on their tasks, ultimately contributing to an overall increase in personal and professional effectiveness. </p>
 
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. In eu libero ligula. Fusce eget metus lorem, ac viverra leo. Nullam convallis.</p>
 
@@ -234,8 +234,8 @@
 												<strong class="process-step-circle-content">01</strong>
 											</div>
 											<div class="process-step-content">
-												<h4 class="mb-1 text-4 font-weight-bold">Identifying the learning Needs</h4>
-												<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+												<h4 class="mb-1 text-4 font-weight-bold">Analysis the learning Needs</h4>
+												<p class="mb-0"> It involves assessing the current skills and knowledge of the workforce, identifying gaps.</p>
 											</div>
 										</div>
 										<div class="process-step col-md-6 col-lg-3 mb-5 mb-md-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">
@@ -244,7 +244,7 @@
 											</div>
 											<div class="process-step-content">
 												<h4 class="mb-1 text-4 font-weight-bold">Desgin the training </h4>
-												<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+												<p class="mb-0">In this stage, the training program and materials are developed.</p>
 											</div>
 										</div>
 										<div class="process-step col-md-6 col-lg-3 mb-5  mb-lg-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">
@@ -253,7 +253,7 @@
 											</div>
 											<div class="process-step-content">
 												<h4 class="mb-1 text-4 font-weight-bold">Deliver the training</h4>
-												<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+												<p class="mb-0">It includes scheduling, organizing and conducting the training sessions</p>
 											</div>
 										</div>
 										<div class="process-step col-md-6 col-lg-3 mb-lg-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="800">
@@ -261,8 +261,8 @@
 												<strong class="process-step-circle-content">04</strong>
 											</div>
 											<div class="process-step-content">
-												<h4 class="mb-1 text-4 font-weight-bold">Evaluate the tarining</h4>
-												<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+												<h4 class="mb-1 text-4 font-weight-bold">Evaluate the training</h4>
+												<p class="mb-0">Measuring the employees knowledge and skills before and after </p>
 											</div>
 										</div>
 									</div>
