--- a/Testing.html
+++ b/Testing.html
@@ -235,7 +235,7 @@
 											</div>
 											<div class="process-step-content">
 												<h4 class="mb-1 text-4 font-weight-bold">Unit Testing</h4>
-												<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+												<p class="mb-0">To validate that each unit of the software application is working as intended.</p>
 											</div>
 										</div>
 										<div class="process-step col-md-6 col-lg-3 mb-5 mb-md-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">
@@ -244,7 +244,7 @@
 											</div>
 											<div class="process-step-content">
 												<h4 class="mb-1 text-4 font-weight-bold">Integration Testing</h4>
-												<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+												<p class="mb-0">It helps to reveal any issues that may arise from the interaction between the different units</p>
 											</div>
 										</div>
 										<div class="process-step col-md-6 col-lg-3 mb-5  mb-lg-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">
@@ -253,7 +253,7 @@
 											</div>
 											<div class="process-step-content">
 												<h4 class="mb-1 text-4 font-weight-bold">System Testing</h4>
-												<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+												<p class="mb-0"> it also satisfies the requirements that guided its design and development. </p>
 											</div>
 										</div>
 										<div class="process-step col-md-6 col-lg-3 mb-lg-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="800">
@@ -262,7 +262,7 @@
 											</div>
 											<div class="process-step-content">
 												<h4 class="mb-1 text-4 font-weight-bold">Acceptance Testing</h4>
-												<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+												<p class="mb-0">whether a system is ready for production and is capable of being accepted by the customer.</p>
 											</div>
 										</div>
 									</div>
