--- a/about-us.html
+++ b/about-us.html
@@ -190,7 +190,7 @@
 							</div>
 							<div class="col-md-6">
 								<div class="overflow-hidden mb-2">
-									<h2 class="text-color-dark font-weight-normal text-7 mb-0 pt-0 mt-0 appear-animation" data-appear-animation="maskUp" data-appear-animation-delay="1200">Who <strong class="font-weight-extra-bold">We Are</strong></h2>
+									<h2 class="text-color-dark font-weight-normal text-7 mb-0 pt-0 mt-0 appear-animation" data-appear-animation="maskUp" data-appear-animation-delay="1200">Who <strong class="font-weight-extra-bold text-color-thick">We Are</strong></h2>
 								</div>
 								<p class="appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1400">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam <a href="#">vehicula</a> sit amet enim ac sagittis. Curabitur eget leo varius, elementum mauris eget, egestas quam. Donec ante risus, dapibus sed lectus non, lacinia vestibulum nisi. Morbi vitae augue quam. Nullam ac laoreet libero.</p>
 								<p class="mb-0 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1600">Consectetur adipiscing elit. Aliquam iaculis sit amet enim ac sagittis. Curabitur eget leo varius, elementum mauris eget, egestas quam.</p>
@@ -233,7 +233,7 @@
 					<div class="row">
 						<div class="col-md-8 mx-md-auto text-center">
 
-							<h2 class="text-color-dark font-weight-normal text-7 mb-0 pt-2">Our <strong class="font-weight-extra-bold">Branches</strong></h2>
+							<h2 class="text-color-dark font-weight-normal text-7 mb-0 pt-2">Our <strong class="font-weight-extra-bold text-color-thick ">Branches</strong></h2>
 							
 
 							<section class="timeline" id="timeline">
@@ -311,7 +311,7 @@
 				<!-- our projects -->
 				<div class="row mx-5 text-center">
 					<div class="col">
-						<h2 class="font-weight-normal text-6 mt-4">Our <strong class="font-weight-extra-bold">Projects</strong></h2>
+						<h2 class="font-weight-normal text-6 mt-4">Our <strong class="font-weight-extra-bold text-color-thick">Projects</strong></h2>
 					</div>
 				</div>
 				<div class=" lightbox appear-animation mb-5" data-appear-animation="fadeInUpShorter" data-plugin-options="{'delegate': 'a.lightbox-portfolio', 'type': 'image', 'gallery': {'enabled': true}}">
@@ -590,7 +590,7 @@
 
 						<div class="row">
 							<div class="col pb-4 text-center">
-								<h2 class="text-color-dark font-weight-normal text-7 mb-0 pt-2">Meet <strong class="font-weight-extra-bold">Our Team</strong></h2>
+								<h2 class="text-color-dark font-weight-normal text-7 mb-0 pt-2">Meet <strong class="font-weight-extra-bold text-color-thick">Our Team</strong></h2>
 								<p>Rockstars lorem ipsum dolor sit amet, consectetur adipiscing elit ac laoreet libero.</p>
 							</div>
 						</div>
