--- a/Datawarehousing.html
+++ b/Datawarehousing.html
@@ -235,7 +235,7 @@
 												<strong class="process-step-circle-content">1</strong>
 											</div>
 											<div class="process-step-content">
-												<h4 class="mb-1 text-4 font-weight-bold">Data Sources</h4>
+												<h4 class="mb-1 text-4 font-weight-bold">Planning and Requirements Gathering</h4>
 												<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas risus est, dignissim non urna at, efficitur cursus nibh. Curabitur varius vel mauris at auctor. Nam ullamcorper bibendum est et porta. Donec congue libero vitae semper varius. Vivamus eu congue leo. Morbi molestie aliquet magna ac dignissim. Quisque ullamcorper elit at metus elementum condimentum. Sed orci augue, pellentesque in egestas quis, vestibulum non ex. Suspendisse tempus tellus ac augue iaculis suscipit.</p>
 											</div>
 										</div>
