--- a/Offshore-development.html
+++ b/Offshore-development.html
@@ -196,11 +196,11 @@
 							</div>
 
 							<div class="mt-4">
-								<p class="text-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. </p>
+								
 
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. In eu libero ligula. Fusce eget metus lorem, ac viverra leo. Nullam convallis, arcu vel pellentesque sodales.</p>
+								<p>Subhujo Technologies is the go-to IT services provider for leading multinationals looking to create competitive advantages through access to superior tech talent at low cost locations. Our team has established state of the art R&D labs, software delivery centers and design hubs that enable companies around the world stay ahead in a rapidly changing environment.</p>
 
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. In eu libero ligula. Fusce eget metus lorem, ac viverra leo. Nullam convallis.</p>
+								<p>subuhjo technologies provides an innovative solution for businesses to access world-class software development services without the need of a physical office in costly locations. Our experts assist with setting up dedicated offshore development centers across the globe, helping our clients gain maximum advantage from top quality tech talent at low costs.</p>
 
 								<div class="my-4">
 									<ul class="list list-icons list-primary list-borders m-0">
@@ -225,7 +225,7 @@
 									</div>
 								</div> -->
 
-								<p class="pt-lg-12">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. In eu libero ligula. Fusce eget metus lorem, ac viverra leo. Nullam convallis, arcu vel pellentesque sodales.</p>
+								<p class="pt-lg-12 my-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur pellentesque neque eget diam posuere porta. Quisque ut nulla at nunc vehicula lacinia. Proin adipiscing porta tellus, ut feugiat nibh adipiscing sit amet. In eu justo a felis faucibus ornare vel id metus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae. In eu libero ligula. Fusce eget metus lorem, ac viverra leo. Nullam convallis, arcu vel pellentesque sodales.</p>
 
 								<div class="my-4">
 									<div class="row process process-shapes process-shapes-always-animate">
@@ -235,7 +235,7 @@
 											</div>
 											<div class="process-step-content">
 												<h4 class="mb-1 text-4 font-weight-bold">Contractor ODC Model</h4>
-												<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+												<p class="mb-0">Subuhjo Technologies offers a cost-effective way for companies to access world class expertise without incurring excessive overhead charges - wages vary from country to country</p>
 											</div>
 										</div>
 										<div class="process-step col-md-6 col-lg-6 mb-5 mb-md-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="400">
@@ -244,7 +244,7 @@
 											</div>
 											<div class="process-step-content">
 												<h4 class="mb-1 text-4 font-weight-bold">Customer ODC Model</h4>
-												<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+												<p class="mb-0">Subuhjo Technologies provides a unique solution for those looking to expand their business across the global landscape. We enable customers to access custom development centers based on specific requirements;</p>
 											</div>
 										</div>
 										<!-- <div class="process-step col-md-6 col-lg-3 mb-5 mb-md-0 mb-lg-4 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="600">
